--- a/.env.dist
+++ b/.env.dist
@@ -2,23 +2,41 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
-###> symfony/framework-bundle ###
+# Project
 APP_ENV=dev
-APP_SECRET=9a419c7d2a3db3e6a21539965c240ef6
+APP_PREFIX=app
+SERVER_IP=null
+SITE_NAME=limba.com.ua
+USER_EMAIL=user@mail.com
+
+# Timezone
+TIMEZONE=Europe/Kiev
+
+#Docker
+COMPOSE_PROJECT_NAME=app
+
+# Symfony
+APP_SECRET=xxx
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
-###< symfony/framework-bundle ###
 
-###> doctrine/doctrine-bundle ###
+# MySQL
+MYSQL_HOST=mysql_host
+MYSQL_DB=mysql_db
+MYSQL_USER=mysql_user
+MYSQL_PASS=mysql_pass
+
+# Doctrine
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-###< doctrine/doctrine-bundle ###
 
-###> symfony/swiftmailer-bundle ###
+# Swiftmailer
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
+
+# Nelmio Cors
+CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
