--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,29 +1,138 @@
 parameters:
-    # Adds a fallback DATABASE_URL if the env var is not set.
-    # This allows you to run cache:warmup even if your
-    # environment variables are not available yet.
-    # You should not need to change this value.
-    env(DATABASE_URL): ''
+  # Adds a fallback DATABASE_URL if the env var is not set.
+  # This allows you to run cache:warmup even if your
+  # environment variables are not available yet.
+  # You should not need to change this value.
+  env(DATABASE_URL): ''
+
+#services:
+#  extension.listener:
+#    class: App\Listener\DoctrineExtensionListener
+#    calls:
+#      - [ setContainer, [ '@service_container' ] ]
+#    tags:
+#      # translatable sets locale after router processing
+#      - { name: kernel.event_listener, event: kernel.request, method: onLateKernelRequest, priority: -10 }
+#      # loggable hooks user username if one is in security context
+#      - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+#      # translatable sets locale such as default application locale before command execute
+#      - { name: kernel.event_listener, event: console.command, method: onConsoleCommand, priority: -10 }
+#  gedmo.listener.blameable:
+#    class: Gedmo\Blameable\BlameableListener
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#      - [ setUserValue, [ '@doctrine' ] ]
+#  gedmo.listener.tree:
+#    class: Gedmo\Tree\TreeListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#  gedmo.listener.translatable:
+#    class: Gedmo\Translatable\TranslatableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#      - [ setDefaultLocale, [ '%default_locale%' ] ]
+#      - [ setTranslationFallback, [ true ] ]
+#  gedmo.listener.timestampable:
+#    class: Gedmo\Timestampable\TimestampableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#  gedmo.listener.sluggable:
+#    class: Gedmo\Sluggable\SluggableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#  gedmo.listener.sortable:
+#    class: Gedmo\Sortable\SortableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#  gedmo.listener.loggable:
+#    class: Gedmo\Loggable\LoggableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
+#  gedmo.listener.softdeleteable:
+#    class: Gedmo\SoftDeleteable\SoftDeleteableListener
+#    public: true
+#    tags:
+#      - { name: doctrine.event_subscriber, connection: default }
+#    calls:
+#      - [ setAnnotationReader, [ '@annotation_reader' ] ]
 
 doctrine:
-    dbal:
-        # configure these for your database server
-        driver: 'pdo_mysql'
-        server_version: '5.7'
-        charset: utf8mb4
-        default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
-
-        url: '%env(resolve:DATABASE_URL)%'
-    orm:
-        auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
-        mappings:
-            App:
-                is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+  dbal:
+    # configure these for your database server
+    driver: 'pdo_mysql'
+    server_version: '5.7'
+    charset: utf8mb4
+    # With Symfony 3.3, remove the `resolve:` prefix
+    url: '%env(resolve:DATABASE_URL)%'
+  orm:
+    auto_generate_proxy_classes: '%kernel.debug%'
+#    naming_strategy: doctrine.orm.naming_strategy.underscore
+#    auto_mapping: true
+#    mappings:
+#      App:
+#        is_bundle: false
+#        type: annotation
+#        dir: '%kernel.project_dir%/src/Entity'
+#        prefix: 'App\Entity'
+#        alias: App
+# @TODO: uncomment for Gedmo
+#    entity_managers:
+#      default:
+#        mappings:
+#          App:
+#            is_bundle: false
+#            type: annotation
+#            dir: '%kernel.project_dir%/src/Entity'
+#            prefix: 'App\Entity'
+#            alias: App
+#          gedmo_translatable:
+#            type: annotation
+#            prefix: Gedmo\Translatable\Entity
+#            dir: '%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity'
+#            #dir: '%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity/MappedSuperclass'
+#            alias: GedmoTranslatable
+#            is_bundle: false
+#          gedmo_translator:
+#            type: annotation
+#            prefix: Gedmo\Translator\Entity
+#            dir: '%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translator/Entity'
+#            alias: GedmoTranslator
+#            is_bundle: false
+#          gedmo_loggable:
+#            type: annotation
+#            prefix: Gedmo\Loggable\Entity
+#            dir: '%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Loggable/Entity'
+#            alias: GedmoLoggable
+#            is_bundle: false
+#          gedmo_tree:
+#            type: annotation
+#            prefix: Gedmo\Tree\Entity
+#            dir: '%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Tree/Entity'
+#            alias: GedmoTree
+#            is_bundle: false
+#        filters:
+#          softdeleteable:
+#            class: Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter
+#            enabled: true
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
