--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,30 +1,47 @@
+# Read the documentation:
+# https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
-    #default_locale: en
-    #csrf_protection: true
-    #http_method_override: true
+  # https://symfony.com/doc/current/validation.html
+  validation:
+    enable_annotations: true
+  #serializer:
+  #  enable_annotations: true
+# @TODO: uncomment for templating
+#  templating:
+#    engines: ['twig']
+#    #assets_version: SomeVersionScheme
 
-    # Enables session support. Note that the session will ONLY be started if you read or write from it.
-    # Remove or comment this section to explicitly disable session support.
-    session:
-        handler_id: ~
+  session:
+    # With this config, PHP's native session handling is used
+    handler_id:  ~
 
-    #esi: true
-    #fragments: true
-    php_errors:
-        log: true
+  php_errors:
+    log: true
 
-    cache:
-        # Put the unique name of your app here: the prefix seed
-        # is used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+  csrf_protection:
+    enabled: true
 
-        # The app cache caches to the filesystem by default.
-        # Other options include:
+  cache:
+    # Put the unique name of your app here: the prefix seed
+    # is used to compute stable namespaces for cache keys.
+    #prefix_seed: your_vendor_name/app_name
 
-        # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
+    # The app cache caches to the filesystem by default.
+    # Other options include:
 
-        # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-        #app: cache.adapter.apcu
+    # Redis
+    #app: cache.adapter.redis
+    #default_redis_provider: redis://localhost
+
+    # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
+    #app: cache.adapter.apcu
+
+  #esi: ~
+  secret: '%env(APP_SECRET)%'
+  form: ~
+  default_locale: '%default_locale%'
+  fragments: ~
+  http_method_override: true
+
+  assets:
+    json_manifest_path: '%kernel.project_dir%/public/manifest.json'
