--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -1,3 +1,16 @@
+# Read the documentation:
+# https://symfony.com/doc/current/bundles/SensioFrameworkExtraBundle/index.html
 sensio_framework_extra:
-    router:
-        annotations: false
+  router:
+    annotations: true
+  request:
+    converters: true
+    auto_convert: true
+  view:
+    annotations: true
+  cache:
+    annotations: true
+  security:
+    annotations: true
+  psr_message:
+    enabled: false # Defaults to true if the PSR-7 bridge is installed
