--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,6 +1,7 @@
 framework:
-    default_locale: '%locale%'
-    translator:
-        default_path: '%kernel.project_dir%/translations'
-        fallbacks:
-            - '%locale%'
+  default_locale: '%default_locale%'
+  translator:
+    paths:
+      - '%kernel.project_dir%/translations'
+    fallbacks:
+      - '%default_locale%'
