--- a/composer.json
+++ b/composer.json
@@ -2,34 +2,35 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "*",
-        "symfony/console": "*",
-        "symfony/expression-language": "*",
+        "symfony/asset": "^4.1",
+        "symfony/console": "^4.1",
+        "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.1",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
+        "symfony/form": "^4.1",
+        "symfony/framework-bundle": "^4.1",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "*",
-        "symfony/security-bundle": "*",
-        "symfony/serializer-pack": "*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/process": "^4.1",
+        "symfony/security-bundle": "^4.1",
+        "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": "*",
-        "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/twig-bundle": "^4.1",
+        "symfony/validator": "^4.1",
+        "symfony/web-link": "^4.1",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "symfony/debug-pack": "*",
-        "symfony/dotenv": "*",
+        "symfony/debug-pack": "^1.0",
+        "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "*"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0",
+        "symfony/thanks": "^1.1",
+        "symfony/web-server-bundle": "^4.1"
     },
     "config": {
         "preferred-install": {
@@ -72,7 +73,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "id": "01C12ECEVRTDJ953219SFTVCPT",
+            "allow-contrib": true,
             "require": "4.1.*"
         }
     }
