--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,12 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "symfony/browser-kit": "^4.1",
+        "symfony/css-selector": "^4.1",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^4.1",
         "symfony/profiler-pack": "^1.0",
         "symfony/test-pack": "^1.0",
         "symfony/thanks": "^1.1",
