--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "mockery/mockery": "^1.2",
         "symfony/browser-kit": "^4.1",
         "symfony/css-selector": "^4.1",
         "symfony/debug-pack": "^1.0",
