--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/web-link": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.1",
         "twig/extensions": "^1.5"
     },
