--- a/composer.json
+++ b/composer.json
@@ -1,87 +1,88 @@
 {
-    "type": "project",
-    "license": "proprietary",
-    "require": {
-        "php": "^7.2",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
-        "symfony/expression-language": "^4.1",
-        "symfony/flex": "^1.1",
-        "symfony/form": "^4.1",
-        "symfony/framework-bundle": "^4.1",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "^1.0",
-        "symfony/process": "^4.1",
-        "symfony/security-bundle": "^4.1",
-        "symfony/serializer-pack": "^1.0",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bundle": "^4.1",
-        "symfony/validator": "^4.1",
-        "symfony/web-link": "^4.1",
-        "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^4.1",
-        "twig/extensions": "^1.5"
+  "type": "project",
+  "license": "proprietary",
+  "require": {
+    "php": "^7.2",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "sensio/framework-extra-bundle": "^5.1",
+    "symfony/asset": "^4.1",
+    "symfony/console": "^4.1",
+    "symfony/expression-language": "^4.1",
+    "symfony/flex": "^1.1",
+    "symfony/form": "^4.1",
+    "symfony/framework-bundle": "^4.1",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/orm-pack": "^1.0",
+    "symfony/process": "^4.1",
+    "symfony/security": "^4.1",
+    "symfony/security-bundle": "^4.1",
+    "symfony/serializer-pack": "^1.0",
+    "symfony/swiftmailer-bundle": "^3.1",
+    "symfony/twig-bundle": "^4.1",
+    "symfony/validator": "^4.1",
+    "symfony/web-link": "^4.1",
+    "symfony/webpack-encore-pack": "^1.0",
+    "symfony/yaml": "^4.1",
+    "twig/extensions": "^1.5"
+  },
+  "require-dev": {
+    "mockery/mockery": "^1.2",
+    "symfony/browser-kit": "^4.1",
+    "symfony/css-selector": "^4.1",
+    "symfony/debug-pack": "^1.0",
+    "symfony/dotenv": "^4.1",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/phpunit-bridge": "^4.1",
+    "symfony/profiler-pack": "^1.0",
+    "symfony/test-pack": "^1.0",
+    "symfony/thanks": "^1.1",
+    "symfony/web-server-bundle": "^4.1"
+  },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
     },
-    "require-dev": {
-        "mockery/mockery": "^1.2",
-        "symfony/browser-kit": "^4.1",
-        "symfony/css-selector": "^4.1",
-        "symfony/debug-pack": "^1.0",
-        "symfony/dotenv": "^4.1",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/test-pack": "^1.0",
-        "symfony/thanks": "^1.1",
-        "symfony/web-server-bundle": "^4.1"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "id": "01C12ECEVRTDJ953219SFTVCPT",
-            "allow-contrib": true,
-            "require": "4.1.*"
-        }
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "id": "01C12ECEVRTDJ953219SFTVCPT",
+      "allow-contrib": true,
+      "require": "4.1.*"
+    }
+  }
 }
