--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/phpunit-bridge": "^4.1",
     "symfony/profiler-pack": "^1.0",
+    "symfony/requirements-checker": "^1.1",
     "symfony/test-pack": "^1.0",
     "symfony/thanks": "^1.1",
     "symfony/web-server-bundle": "^4.1"
@@ -66,7 +67,8 @@
   "scripts": {
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+      "assets:install %PUBLIC_DIR%": "symfony-cmd",
+      "requirements-checker": "script"
     },
     "post-install-cmd": [
       "@auto-scripts"
