--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "mockery/mockery": "^1.2",
     "symfony/browser-kit": "^4.1",
     "symfony/css-selector": "^4.1",
+    "symfony/debug-bundle": "^4.1",
     "symfony/debug-pack": "^1.0",
     "symfony/dotenv": "^4.1",
     "symfony/maker-bundle": "^1.0",
