--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
     "php": "^7.2",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "doctrine/doctrine-migrations-bundle": "^1.3",
+    "gedmo/doctrine-extensions": "^2.4",
     "sensio/framework-extra-bundle": "^5.1",
+    "stof/doctrine-extensions-bundle": "^1.3",
     "suncat/mobile-detect-bundle": "^1.1",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "^4.1",
