--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "symfony/asset": "^4.1",
     "symfony/console": "^4.1",
     "symfony/expression-language": "^4.1",
+    "symfony/finder": "^4.1",
     "symfony/flex": "^1.1",
     "symfony/form": "^4.1",
     "symfony/framework-bundle": "^4.1",
@@ -25,6 +26,7 @@
     "symfony/security-bundle": "^4.1",
     "symfony/serializer-pack": "^1.0",
     "symfony/swiftmailer-bundle": "^3.1",
+    "symfony/templating": "^4.1",
     "symfony/twig-bundle": "^4.1",
     "symfony/validator": "^4.1",
     "symfony/web-link": "^4.1",
