--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,10 +6,9 @@ framework:
     enable_annotations: true
   #serializer:
   #  enable_annotations: true
-# @TODO: uncomment for templating
-#  templating:
-#    engines: ['twig']
-#    #assets_version: SomeVersionScheme
+  templating:
+    engines: ['twig']
+    #assets_version: SomeVersionScheme
 
   session:
     # With this config, PHP's native session handling is used
