--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "doctrine/doctrine-migrations-bundle": "^1.3",
     "gedmo/doctrine-extensions": "^2.4",
+    "nelmio/cors-bundle": "^1.5",
     "sensio/framework-extra-bundle": "^5.1",
     "stof/doctrine-extensions-bundle": "^1.3",
     "suncat/mobile-detect-bundle": "^1.1",
