--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "doctrine/doctrine-migrations-bundle": "^1.3",
     "gedmo/doctrine-extensions": "^2.4",
+    "knplabs/gaufrette": "^0.7.0",
+    "knplabs/knp-gaufrette-bundle": "^0.5.3",
     "knplabs/knp-time-bundle": "^1.8",
     "nelmio/cors-bundle": "^1.5",
     "sensio/framework-extra-bundle": "^5.1",
