--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "doctrine/doctrine-migrations-bundle": "^1.3",
     "gedmo/doctrine-extensions": "^2.4",
+    "jms/i18n-routing-bundle": "^3.0",
     "jms/serializer-bundle": "^2.4",
     "knplabs/gaufrette": "^0.7.0",
     "knplabs/knp-gaufrette-bundle": "^0.5.3",
