--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "symfony/process": "^4.1",
     "symfony/security": "^4.1",
     "symfony/security-bundle": "^4.1",
+    "symfony/serializer": "^4.1",
     "symfony/serializer-pack": "^1.0",
     "symfony/swiftmailer-bundle": "^3.1",
     "symfony/templating": "^4.1",
