--- a/package.json
+++ b/package.json
@@ -1,14 +1,105 @@
 {
-    "devDependencies": {
-        "@symfony/webpack-encore": "^0.20.0",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production"
-    }
+  "name": "limba.com.ua",
+  "version": "0.0.1",
+  "description": "Dependency packages for limba.com.ua project.",
+  "author": "Alexander Saveliev <alex@spbcrew.com>",
+  "license": "MIT",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rainlike/web.limba.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rainlike/web.limba/issues"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "encore:dev:serv": "encore dev-server",
+    "encore:dev": "encore dev",
+    "encore:watch": "encore dev --watch",
+    "encore:build": "encore production"
+  },
+  "dependencies": {
+    "animate.css": "^3.7.0",
+    "autoprefixer": "^9.3.1",
+    "bootstrap": "^4.1.3",
+    "es5-shim": "^4.5.12",
+    "gulp": "^3.9.1",
+    "hammerjs": "^2.0.8",
+    "html5shiv": "^3.7.3",
+    "lodash": "^4.17.11",
+    "mdi": "^2.2.43",
+    "mobile-detect": "^1.4.3",
+    "normalize.css": "^8.0.0",
+    "popper.js": "^1.14.4",
+    "tether": "^1.4.5",
+    "typescript": "^3.1.5",
+    "underscore": "^1.9.1",
+    "vue": "^2.5.17",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
+    "@symfony/webpack-encore": "^0.20.0",
+    "@types/dotenv": "^4.0.3",
+    "@types/es6-promise": "^3.3.0",
+    "@types/jquery": "^3.3.22",
+    "assets-webpack-plugin": "^3.9.7",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.1",
+    "cypress": "^3.1.0",
+    "dotenv": "^6.1.0",
+    "eslint": "^5.8.0",
+    "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file": "^0.2.2",
+    "file-loader": "^2.0.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^7.0.0",
+    "get-env": "^0.5.10",
+    "html-loader": "^0.5.5",
+    "jsdoc": "^3.5.5",
+    "jshint": "^2.9.6",
+    "jshint-loader": "^0.8.4",
+    "jslint": "^0.12.0",
+    "json-loader": "^0.5.7",
+    "markdown-loader": "^4.0.0",
+    "node-sass": "^4.9.4",
+    "npm-check": "^5.9.0",
+    "npx": "^10.2.0",
+    "path": "^0.12.7",
+    "raw-loader": "^0.5.1",
+    "require-dir": "^1.1.0",
+    "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.7.1",
+    "system": "^2.0.1",
+    "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "typescript-eslint-parser": "^20.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
+    "val-loader": "^1.1.1",
+    "webpack-chunk-hash": "^0.6.0",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-material-design-icons": "^0.1.0",
+    "webpack-notifier": "^1.6.0"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  }
 }
