--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,14 +10,14 @@ imports:
 parameters:
   app_env: '%env(APP_ENV)%'
   app_prefix: '%env(APP_PREFIX)%'
-  default_locale: 'ru'
-  app_locales: ru|uk|en|es
-  i18n_locales: [ru,uk,en,es]
+  default_locale: 'en'
+  app_locales: en|es|uk|ru|pl
+  i18n_locales: [en,es,uk,ru,pl]
   user_email: '%env(USER_EMAIL)%'
   site_name: '%env(SITE_NAME)%'
   server_ip: '%env(SERVER_IP)%'
   in_developing: true
-  github_link: 'https://github.com/rainlike/web.limba'
+  github_link: 'https://github.com/rainlike/web.diftong'
   configs_dir: '%kernel.project_dir%/config'
 
 # JMSI18nRoutingBundle Configuration
