--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,6 +24,15 @@
         </testsuite>
     </testsuites>
 
+    <groups>
+        <include>
+            <group>done</group>
+        </include>
+        <exclude>
+            <group>ignore</group>
+        </exclude>
+    </groups>
+
     <filter>
         <whitelist>
             <directory>src</directory>
@@ -33,4 +42,13 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+
+    <logging>
+        <log type="coverage-html" target="tests/_output/coverage"/>
+        <log type="coverage-clover" target="tests/_output/coverage.xml"/>
+        <log type="coverage-php" target="tests/_output/coverage.serialized"/>
+        <log type="testdox-html" target="tests/_output/testdox.html"/>
+        <log type="testdox-text" target="tests/_output/testdox.txt"/>
+        <log type="junit" target="var/log/phpunit/logfile.xml"/>
+    </logging>
 </phpunit>
