--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     "knplabs/knp-gaufrette-bundle": "^0.5.3",
     "knplabs/knp-time-bundle": "^1.8",
     "nelmio/cors-bundle": "^1.5",
+    "phpspec/phpspec": "^5.1",
+    "phpspec/prophecy": "^1.8",
     "sensio/framework-extra-bundle": "^5.1",
     "stof/doctrine-extensions-bundle": "^1.3",
     "suncat/mobile-detect-bundle": "^1.1",
