--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "directories": {
     "test": "tests"
   },
+  "eslintIgnore": [
+    "/vendor/",
+    "/node_modules/",
+    "/public/",
+    "**/*min.js",
+    "**/*.scss"
+  ],
   "scripts": {
     "encore:dev:serv": "encore dev-server",
     "encore:dev": "encore dev",
@@ -60,9 +67,16 @@
     "cypress": "^3.1.0",
     "dotenv": "^6.1.0",
     "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-typescript": "^0.13.0",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file": "^0.2.2",
     "file-loader": "^2.0.0",
     "fs": "^0.0.1-security",
@@ -86,6 +100,15 @@
     "script-loader": "^0.7.2",
     "style-loader": "^0.23.1",
     "stylelint": "^9.7.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-declaration-strict-value": "^1.1.2",
+    "stylelint-declaration-use-variable": "^1.7.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-order": "^1.0.0",
+    "stylelint-scss": "^3.4.0",
+    "stylelint-selector-bem-pattern": "^2.0.0",
     "system": "^2.0.1",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
