--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,4 @@
 {
-  "web/js/app.js": "web/js/app.229db671361946749f4f.js"
+  "web/js/app.js": "web/js/app.d9c5e0654143907a9e5f.js",
+  "web/css/app.css": "web/css/app.d9c5e0654143907a9e5f.css"
 }
