--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "animate.css": "^3.7.0",
     "autoprefixer": "^9.3.1",
     "bootstrap": "^4.1.3",
+    "cssnano": "^4.1.7",
     "es5-shim": "^4.5.12",
     "gulp": "^3.9.1",
     "hammerjs": "^2.0.8",
@@ -42,6 +43,8 @@
     "mobile-detect": "^1.4.3",
     "normalize.css": "^8.0.0",
     "popper.js": "^1.14.4",
+    "postcss": "^7.0.6",
+    "precss": "^3.1.2",
     "tether": "^1.4.5",
     "trumbowyg": "^2.11.1",
     "typescript": "^3.1.5",
@@ -93,6 +96,9 @@
     "npm-check": "^5.9.0",
     "npx": "^10.2.0",
     "path": "^0.12.7",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "require-dir": "^1.1.0",
     "resolve-url-loader": "^3.0.0",
@@ -117,12 +123,18 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "val-loader": "^1.1.1",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^3.1.10",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-material-design-icons": "^0.1.0",
     "webpack-notifier": "^1.6.0"
+  },
+  "peerDependencies": {
+    "caniuse-lite": "^1.0.30000909",
+    "jquery": "^3.3.1"
   },
   "engines": {
     "yarn": ">= 1.0.0"
