--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -41,3 +41,6 @@ framework:
   default_locale: '%default_locale%'
   fragments: ~
   http_method_override: true
+
+  assets:
+    json_manifest_path: '%kernel.project_dir%/public/manifest.json'
