--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "last 4 versions"
   ],
   "scripts": {
-    "build": "webpack --progress && npx nucleus --config config/config.nucleus.json",
-    "build:prod": "webpack --env=prod --progress && npx nucleus --config config/config.nucleus.json",
+    "build": "webpack --progress",
+    "build:prod": "webpack --env=prod --progress",
     "watch": "webpack --watch",
     "analyze": "webpack --json --profile > debug/webpack.json",
     "analyze:prod": "webpack --env=prod --json --profile > debug/webpack.json",
-    "serv": "webpack-dev-server",
-    "nucleus": "npx nucleus --config config/config.nucleus.json",
+    "serv": "npx webpack-dev-server",
+    "nucleus": "gulp nucleus && npx nucleus --config config/config.nucleus.json",
     "check": "npx npm-check",
     "encore:dev:serv": "encore dev-server",
     "encore:dev": "encore dev",
@@ -96,6 +96,10 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^7.0.0",
     "get-env": "^0.5.10",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-variables": "^1.2.0",
     "html-loader": "^0.5.5",
     "jsdoc": "^3.5.5",
     "jshint": "^2.9.6",
@@ -103,13 +107,14 @@
     "jslint": "^0.12.0",
     "json-loader": "^0.5.7",
     "markdown-loader": "^4.0.0",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "npm-check": "^5.9.0",
     "npx": "^10.2.0",
     "nucleus-styleguide": "^1.1.1",
     "path": "^0.12.7",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
+    "postcss-load-config": "^2.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "require-dir": "^1.1.0",
