--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "ext-iconv": "*",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "doctrine/doctrine-migrations-bundle": "^1.3",
+    "friendsofsymfony/user-bundle": "^2.1",
     "gedmo/doctrine-extensions": "^2.4",
     "jms/i18n-routing-bundle": "^3.0",
     "jms/serializer-bundle": "^2.4",
