--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,33 @@
 #index:
 #  path: /
 #  defaults: { _controller: 'App\Controller\DefaultController::index' }
+
+# FOSUser routes
+# Read the documentation:
+# https://symfony.com/doc/master/bundles/FOSUserBundle/index.html
+
+#fos_user:
+#    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+fos_user_security:
+  resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_register:
+  resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+  prefix: /register
+
+fos_user_profile:
+  resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+  prefix: /profile
+
+fos_user_resetting:
+  resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+  prefix: /resetting
+
+fos_user_change_password:
+  resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+  prefix: /change_password
+
+fos_user_group:
+  resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+  prefix: /group
