--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "jslint": "^0.12.0",
     "json-loader": "^0.5.7",
     "markdown-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "npm-check": "^5.9.0",
     "npx": "^10.2.0",
