--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,10 @@
 {
-  "web/js/common.js": "web/js/common.12b8084ac5a8fe4da528.js",
-  "web/js/homepage.js": "web/js/homepage.3f98799ebc2065c90006.js",
-  "web/css/homepage.css": "web/css/homepage.3f98799ebc2065c90006.css"
+  "web/js/backoffice.js": "web/js/backoffice.a9b540d1d726158f5c40.js",
+  "web/css/backoffice.css": "web/css/backoffice.a9b540d1d726158f5c40.css",
+  "web/js/common.js": "web/js/common.e6da7192f666a68c4795.js",
+  "web/css/common.css": "web/css/common.e6da7192f666a68c4795.css",
+  "web/js/homepage.js": "web/js/homepage.6b7544ddd54496f261b3.js",
+  "web/css/homepage.css": "web/css/homepage.6b7544ddd54496f261b3.css",
+  "web/js/portal.js": "web/js/portal.e18058dc395d9ad6a686.js",
+  "web/css/portal.css": "web/css/portal.e18058dc395d9ad6a686.css"
 }
