--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "license": "proprietary",
   "require": {
     "php": "^7.2",
+    "ext-intl": "*",
+    "ext-json": "*",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
