--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     "popper.js": "^1.14.4",
     "postcss": "^7.0.6",
     "precss": "^3.1.2",
+    "riot": "^3.13.2",
     "tether": "^1.4.5",
     "trumbowyg": "^2.11.1",
     "typescript": "^3.1.5",
     "underscore": "^1.9.1",
-    "vue": "^2.5.17",
+    "vue": "^2.5.22",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   },
@@ -72,7 +73,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.1.2",
-    "@symfony/webpack-encore": "^0.20.0",
+    "@symfony/webpack-encore": "^0.22.4",
     "@types/dotenv": "^4.0.3",
     "@types/es6-promise": "^3.3.0",
     "@types/jquery": "^3.3.22",
@@ -90,6 +91,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-typescript": "^0.13.0",
+    "eslint-plugin-vue": "^5.1.0",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
@@ -138,14 +140,15 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "system": "^2.0.1",
     "ts-loader": "^5.3.0",
+    "ts-vue-plugin": "^0.2.0",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
     "typescript-eslint-parser": "^20.1.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "val-loader": "^1.1.1",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
+    "vue-loader": "^15.6.2",
+    "vue-template-compiler": "^2.5.22",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^3.1.10",
