--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     /* Basic Options */
     "target": "ES6",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     "module": "ES6",                          /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    // "lib": [],                             /* Specify library files to be included in the compilation:  */
+    "lib": [                                  /* Specify library files to be included in the compilation:  */
+      "es2017",
+      "dom"
+    ],
     "allowJs": true,                          /* Allow javascript files to be compiled. */
     "checkJs": false,                         /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -34,12 +37,25 @@
 
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "baseUrl": "assets",                      /* Base directory to resolve non-absolute module names. */
+    "paths": {                                /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+      "@backoffice/*": [
+        "modules/backoffice/*"
+      ],
+      "@common/*": [
+        "modules/common/*"
+      ],
+      "@homepage/*": [
+        "modules/homepage/*"
+      ],
+      "@portal/*": [
+        "modules/portal/*"
+      ]
+    },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
-    "allowSyntheticDefaultImports": true      /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
 
     /* Source Map Options */
@@ -51,6 +67,9 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+
+    /* Plugins */
+    "plugins": [{ "name": "ts-vue-plugin" }]
   },
   "include": [
     "assets/**/*"
@@ -58,6 +77,7 @@
   "exclude": [
     "node_modules",
     "**/*.spec.ts",
+    "**/*.vue",
     "**/*.scss"
   ]
 }
